kubernetes/apps/self-hosted/rocketchat/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.vzkn.eu/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rocketchat
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: self-hosted
spec:
  hostnames:
    - rc.vzkn.eu
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: rocketchat
          port: 3000
